<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bluetooth_Kotlin</string>
    <string name="start_game">START</string>
    <string name="end_game">FINISH</string>
    <string name="start_btn">Запуск</string>
    <string name="status_connected">Connected</string>
    <string name="status_cannotConnect">Connection error</string>
    <string name="status_connectionLost">Connection lost</string>
    <string name="status_noDevice">No device</string>
    <string name="result_tv">Result:</string>
    <string name="player1_tv" tools:ignore="Typos">Player1</string>
    <string name="player2_tv">Player2</string>
    <string name="result">Result:</string>
    <string name="countdown_3">3</string>
    <string name="countdown_2">2</string>
    <string name="countdown_1">1</string>
    <string name="boss_name">BAGEL</string>
    <string name="victory">VICTORY</string>
    <string name="defeat">DEFEAT</string>
    <string name="timerStop">00:00:00</string>
    <string name="timerStartLocal">00:10:00</string>
</resources>