<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintBoss"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu"
    tools:context=".BossGameActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.45"
        android:textSize="20sp"
        android:text="@string/status_noDevice"
        android:textColor="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/ibReconnection"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_reconnection"
        app:layout_constraintStart_toEndOf="@id/tvStatus"
        app:layout_constraintTop_toTopOf="@id/tvStatus"/>

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start_btn"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/tvStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvBossName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/boss_name"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ibBoss"/>

    <ImageButton
        android:id="@+id/ibBoss"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btStart"
        app:srcCompat="@drawable/ic_boss_main"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/countdown"
        android:background="@drawable/rounded_countdown"
        android:visibility="invisible"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btStart"
        app:layout_constraintBottom_toTopOf="@id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvHit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/ibBoss"
        app:layout_constraintTop_toTopOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="40sp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="@id/ibBoss"
        app:layout_constraintTop_toTopOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/ibBoss"
        app:layout_constraintTop_toTopOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/ibBoss"
        app:layout_constraintTop_toTopOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"
        app:layout_constraintEnd_toEndOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/ibBoss"
        app:layout_constraintTop_toTopOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"
        app:layout_constraintEnd_toEndOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvHit8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/ibBoss"
        app:layout_constraintBottom_toBottomOf="@id/ibBoss"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/result_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>